# esmf-sdk-py-aspect-model-loader

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  CONVENTIONS.md  NOTICE.md  README.md
core/esmf-aspect-meta-model-python/: README.md  pyproject.toml  tox.ini
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/: constants.py  samm_meta_model.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/: README.md  __init__.py  either.py  property.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/characteristics/: characteristic.py  structured_value.py  trait.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/constraints/: encoding_constraint.py  fixed_point_constraint.py  locale_constraint.py  regular_expression_constraint.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/: README.md  __init__.py  base_impl.py  default_aspect.py  default_either.py  default_event.py  default_operation.py  default_property.py  default_unit.py  default_value.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/characteristics/: default_characteristic.py  default_enumeration.py  default_state.py  default_structured_value.py  default_trait.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/constraints/: default_encoding_constraint.py  default_fixed_point_constraint.py  default_language_constraint.py  default_length_constraint.py  default_locale_constraint.py  default_range_constraint.py  default_regular_expression_constraint.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/data_types/: default_abstract_entity.py  default_complex_type.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/loader/: README.md  default_element_cache.py  instantiator_base.py  meta_model_base_attributes.py  model_element_factory.py  samm_graph.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/resolver/: README.md  base.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/samm_cli/: __init__.py  base.py  constants.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/vocabulary/: SAMME.py  constants.py
core/esmf-aspect-meta-model-python/scripts/: constants.py  download_samm_cli.py  download_test_models.py
core/esmf-aspect-meta-model-python/scripts/samm/: download_samm_release.py
core/esmf-aspect-meta-model-python/tests/: test_aspect_functionality.py  test_characteristics.py  test_general.py  test_vocabulary.py
core/esmf-aspect-meta-model-python/tests/integration/: cli_functions.py  test_aspect_functionality.py  test_characteristics.py  test_cli_functions.py  test_constraints.py  test_entities.py  test_event.py  test_general.py  test_resolve_elements_referencies.py  test_vocabulary.py
core/esmf-aspect-meta-model-python/tests/unit/base/: test_aspect.py  (+3 more)
core/esmf-aspect-meta-model-python/tests_invalid/: test_constraints.py
(+247 files in other folders)
