[project]
name = "esmf-aspect-model-loader"
version = "2.3.0"
description = "Load Aspect Models based on the Semantic Aspect Meta Model"
authors = [
    { name = "Eclipse Semantic Modeling Framework" },
    { name = "Hanna Shalamitskaya", email = "external.Hanna.Shalamitskaya@de.bosch.com" },
    { name = "Andreas Textor", email = "Andreas.Textor@de.bosch.com" },
    { name = "Georg Schmidt-Dumont", email = "Georg.Schmidt-Dumont@de.bosch.com" },
    { name = "Nico Makowe" },
    { name = "Aghyad Farrouh" },
    { name = "Lars Heppler", email = "Lars.Heppler@de.bosch.com" },
]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["samm", "esmf", "digital twin", "idta", "model loader", "semantic api", "semantics", "aspect"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
# Pinned to exact versions (no ranges) to harden against supply-chain attacks.
dependencies = [
    "requests==2.34.2",
    "rdflib==7.6.0",
]

[project.urls]
Homepage = "https://projects.eclipse.org/projects/dt.esmf"
Repository = "https://github.com/bci-oss/esmf-sdk-py-aspect-model-loader"
Documentation = "https://eclipse-esmf.github.io/python-sdk-guide/index.html"

[project.scripts]
download-samm-release = "scripts.samm.download_samm_release:main"
download-samm-branch = "scripts.samm.download_samm_branch:main"
download-samm-cli = "scripts.download_samm_cli:download_samm_cli"
download-test-models = "scripts.download_test_models:download_test_models"

# Development-only dependencies (PEP 735 dependency group, managed by uv).
# Note: `tox` lives here, not in runtime `dependencies`.
[dependency-groups]
dev = [
    "black==23.12.1",
    "coverage==7.14.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.20.2",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-sugar==0.9.7",
    "types-requests==2.33.0.20260518",
    "tox==4.54.0",
    "tox-uv==1.35.2",
]

# Pin the uv version that may operate on this project so the lockfile cannot
# silently drift between local development and CI. This must be kept in sync
# with the `version` input of the setup-uv action pinned in the GitHub Actions
# workflows (.github/workflows/*.yml). uv refuses to run if its version doesn't match.
[tool.uv]
required-version = "==0.11.21"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esmf_aspect_meta_model_python"]
# SAMM meta model files are downloaded into the package at build time and are
# git-ignored; force-include them so they are packaged in the wheel.
artifacts = [
    "esmf_aspect_meta_model_python/samm_aspect_meta_model/samm/**/*",
]
